--- a/build.gradle
+++ b/build.gradle
@@ -148,15 +148,15 @@ allprojects {
         compileOnly 'com.intellectualsites.plotsquared:plotsquared-bukkit:7.0.0-rc.4'
         compileOnly 'com.github.LoneDev6:api-itemsadder:3.6.1'
         compileOnly 'com.palmergames.bukkit.towny:towny:0.100.1.0'
+        compileOnly 'me.clip:placeholderapi:2.11.5'
+        compileOnly 'org.black_ixx:playerpoints:3.2.6'
         implementation platform('com.intellectualsites.bom:bom-newest:1.35')
-        implementation("com.artillexstudios.axapi:axapi:1.4.507:all")
+        implementation("com.artillexstudios.axapi:axapi:1.4.513:all")
         implementation("com.zaxxer:HikariCP:5.1.0")
         implementation("org.bstats:bstats-bukkit:3.0.2")
-        compileOnly 'org.black_ixx:playerpoints:3.2.6'
-//        compileOnly('com.github.Maxlego08:zShop-API:3.0.5')  {
-//            exclude module: "zMenu-API"
-//        }
-        compileOnly 'me.clip:placeholderapi:2.11.5'
+        implementation('com.github.Maxlego08:zMenu-API:1.0.3.7')
+        implementation('com.github.Maxlego08:zShop-API:3.0.5')
+
     }
 }
 
