--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,7 @@ allprojects {
         compileOnly 'com.palmergames.bukkit.towny:towny:0.100.1.0'
         compileOnly 'me.clip:placeholderapi:2.11.5'
         compileOnly 'org.black_ixx:playerpoints:3.2.6'
+        compileOnly 'com.github.DeadSilenceIV:AdvancedChestsAPI:3.2-BETA'
         implementation platform('com.intellectualsites.bom:bom-newest:1.35')
         implementation("com.artillexstudios.axapi:axapi:1.4.513:all")
         implementation("com.zaxxer:HikariCP:5.1.0")
