--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,6 @@ include 'nms:v1_20_R4'
 include 'nms:v1_21_R1'
 include 'nms:v1_18_R2'
 include 'nms:v1_21_R2'
-include 'nms:v1_21_R3'
-include 'nms:v1_21_R4'
+//include 'nms:v1_21_R3'
 findProject(':nms:v1_18_R2')?.name = 'v1_18_R2'
 
